# CDLF

./: .gitignore  BiasLayer.cpp  BiasLayer.h  BranchLayer.cpp  BranchLayer.h  CMakeLists.txt  ConvolutionLayer.cpp  ConvolutionLayer.h  FCLayer.cpp  FCLayer.h  Findblaze.cmake  IdentityLayer.cpp  IdentityLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  LossConvexExample1.cpp  LossConvexExample1.h  LossConvexExample2.cpp  LossConvexExample2.h  LossLayer.cpp  LossLayer.h  LossNonConvexExample1.cpp  LossNonConvexExample1.h  LossNonConvexExample2.cpp  LossNonConvexExample2.h  MaxPoolingLayer.cpp  MaxPoolingLayer.h  Net.cpp  Net.h  NormalizationLayer.cpp  NormalizationLayer.h  README.md  RL_NonConvex.cpp  RL_NonConvex.h  RL_Test.cpp  RL_Test.h  ReLU.cpp  ReLU.h  (+12 more)
CDLF/: BiasLayer.cpp  BiasLayer.h  BranchLayer.cpp  BranchLayer.h  CDLF.h  CMakeLists.txt  ConvolutionLayer.cpp  ConvolutionLayer.h  CrossEntropyLoss.cpp  CrossEntropyLoss.h  DNet.cpp  DNet.h  DeviceKernels.cu  DeviceKernels.h  ExponentialLayer.cpp  ExponentialLayer.h  FCLayer.cpp  FCLayer.h  FeedForwardNet.cpp  FeedForwardNet.h  GAN.cpp  GAN.h  GANet.cpp  GANet.h  GNet.cpp  GNet.h  GPUAttr.cpp  GPUAttr.h  IdentityLayer.cpp  IdentityLayer.h  InputLayer.cpp  InputLayer.h  Layer.cpp  Layer.h  LayerCuda.cu  LayerCuda.h  LayerKernels.cu  LayerKernels.h  LossLayer.cpp  LossLayer.h  (+34 more)
CDLF/include/: AllLayers.h  AssemblyLossLayer.h  BiasLayer.h  BranchLayer.h  CDLF.h  CPUAttr.h  ClipLayer.h  ConcatenateLayer.h  ConvolutionBasicLayer.h  ConvolutionLayer.h  CrossEntropyLoss.h  Cudnn.h  CudnnActivation.h  CudnnBasicConvolution.h  CudnnConvolution.h  CudnnSoftmax.h  CudnnTransposedConvolution.h  DNet.h  DiceLossLayer.h  ExponentialLayer.h  FCLayer.h  FeedForwardNet.h  FileTools.h  GAN.h  GNet.h  GPUAttr.h  IdentityLayer.h  InputLayer.h  Layer.h  LayerCuda.h  LayerKernels.h  LeftMatrixLayer.h  LinearLayer.h  LossConvexExample1.h  LossConvexExample2.h  LossLayer.h  LossNonConvexExample1.h  LossNonConvexExample2.h  MatrixConvertLayer.h  MatrixLayer.h  (+25 more)
CDLF/src/: AssemblyLossLayer.cpp  BiasLayer.cpp  BranchLayer.cpp  CMakeLists.txt  CPUAttr.cpp  ClipLayer.cpp  ConcatenateLayer.cpp  ConvolutionBasicLayer.cpp  ConvolutionLayer.cpp  CrossEntropyLoss.cpp  Cudnn.cpp  CudnnActivation.cpp  CudnnBasicConvolution.cpp  CudnnConvolution.cpp  CudnnSoftmax.cpp  CudnnTransposedConvolution.cpp  DNet.cpp  DiceLossLayer.cpp  ExponentialLayer.cpp  FCLayer.cpp  FeedForwardNet.cpp  FileTools.cpp  GAN.cpp  GNet.cpp  GPUAttr.cpp  IdentityLayer.cpp  InputLayer.cpp  Layer.cpp  LayerCuda.cu  LayerKernels.cu  LeftMatrixLayer.cpp  LinearLayer.cpp  LossConvexExample1.cpp  LossConvexExample2.cpp  LossLayer.cpp  LossNonConvexExample1.cpp  LossNonConvexExample2.cpp  MatrixConvertLayer.cpp  MatrixLayer.cpp  MaxPoolingLayer.cpp  (+24 more)
Examples/: CMakeLists.txt
Examples/4DConvolution/: CMakeLists.txt  Conv4DNet.cpp  Conv4DNet.h  Conv4DTest.cpp
Examples/AdversarialMnist/: AdverMnistNet.cpp  AdverMnistNet.h  CMakeLists.txt  GenerateAdvMnist.cpp  dispAdvSamples.m  displayGradient.m
Examples/Convex/: CMakeLists.txt  ConvexNet.cpp  LossConvexExample2.h  convexTest.cpp
Examples/ConvolutionTest/: CMakeLists.txt  ConvNet.cpp  ConvNet.h  ConvolutionTest.cpp
Examples/HNRadiomics/: CMakeLists.txt  HNClinicalDataMgr.cpp  HNClinicalDataMgr.h  HNDataManager.cpp  HNDataManager.h  HNRadiomicsNet.cpp  HNRadiomicsNet.h  HNSegVNet.cpp  HNSegVNet.h  HNSurvivalNet.cpp  HNSurvivalNet.h  TestHNRadiomics.cpp  TestSegmentV.cpp  TrainHNRadiomics.cpp  TrainSegmentV.cpp  TrainSurvival.cpp
Examples/ITKTest/: CMakeLists.txt  ITKTest.cpp
Examples/MnistAutoEncoder/: AnalyzeMnistGradient.m  CMakeLists.txt  MnistAutoEncoder.cpp  MnistAutoEncoder.h  ReadAdversaryReconstruct.cpp  TestMnistAutoEncoder.cpp  TrainMnistAutoEncoder.cpp  display2Image.m  display3Image.m  displayImage.m
Examples/MnistConv/: CMakeLists.txt  MnistConvNet.cpp  MnistConvNet.h  MnistTest.cpp  MnistTools.cpp  MnistTools.h
Examples/Nonconvex/: CMakeLists.txt  NonconvexNet.cpp  NonconvexNet.h  nonconvexTest.cpp
Examples/TensorTest/: testTensor.cpp
Examples/Test3DSegmentation/: CMakeLists.txt  Test3DSegmentation.cpp  Test3DSegmentation.h  ThreeDSegmentationNet.cpp  ThreeDSegmentationNet.h
Examples/Test4DConvolution/: CMakeLists.txt  Conv4DNet.cpp  Conv4DNet.h  LossConvexExample1.cpp  Test4DConvolution.cpp  Train4DConvolution.cpp
Examples/TestConvexFunc/: CMakeLists.txt  ConvexNet.cpp  ConvexNet.h  TestConvexFunc.cpp  TrainConvexFunc.cpp
Examples/TestConvolution/: CMakeLists.txt  ConvNet.cpp  ConvNet.h  TestConvolution.cpp
Examples/TestCudaConv/: CMakeLists.txt  ConvCudaNet.cpp  ConvCudaNet.h  TestConvCuda.cpp
Examples/TestDAGNetwork/: CMakeLists.txt  DAGNet.cpp  DAGNet.h  TestDAGNet.cpp
Examples/TestDeConv/: CMakeLists.txt  DeConvNet.cpp  DeConvNet.h  TestDeConvNet.cpp
Examples/TestDimensionCollapse/: CMakeLists.txt  CollapseNet.cpp  CollapseNet.h  TestCollapse.cpp
Examples/TestITK3DImageIO/: CMakeLists.txt  TestITK3DImageIO.cpp  TestITKDataMgr.cpp  TestITKDataMgr.h
Examples/TestITK4DImageIO/: CMakeLists.txt  TestITK4DImageIO.cpp
Examples/TestITKImageIO/: CMakeLists.txt  TestITKImageIO.cpp
Examples/TestMnist/: CMakeLists.txt  Mnist0-9Test20181015.txt  MnistConvNet.cpp  MnistConvNet.h  TestMnist.cpp
Examples/TestNonConvexFunc/: CMakeLists.txt  LossNonConvexExample1.cpp  LossNonConvexExample1.h  NonconvexNet.cpp  NonconvexNet.h  TestNonConvecFunc.cpp  TestNonConvecFunc.h
Examples/TestPerf/: CMakeLists.txt  LayersStruct.csv  NetParameters.csv  PerfNet.cpp  PerfNet.h  TestPerf.cpp
Examples/TestSegmentation3D/: CMakeLists.txt  DNet.cpp  DNet.h  DataManager.cpp  DataManager.h  GNet.cpp  GNet.h  Seg3DDataManager.cpp  Seg3DDataManager.h  SegmentDNet.cpp  SegmentDNet.h  SegmentGNet.cpp  SegmentGNet.h  Segmentation3DNet.cpp  Segmentation3DNet.h  StubNetForD.cpp  StubNetForD.h  TestSegmentation3D.cpp  TestSegmentation3D.h
Examples/TestTIPL/: CMakeLists.txt  testTIPL.cpp
Examples/TestTensor/: CMakeLists.txt  testTensor.cpp
Examples/TestUnitFilter/: CMakeLists.txt  TestUnitFilter.cpp  UnitFilterNet.h  (+1 more)
(+83 files in other folders)
