
add_subdirectory(TestConvexFunc)
add_subdirectory(TestMnist)
add_subdirectory(TestNonConvexFunc)
add_subdirectory(TestTensor)
add_subdirectory(TestConvolution)
add_subdirectory(Test4DConvolution)
add_subdirectory(TestITK3DImageIO)
add_subdirectory(TestITK4DImageIO)
add_subdirectory(TestTIPL)
add_subdirectory(TestDAGNetwork)
add_subdirectory(TestDimensionCollapse)
add_subdirectory(TestUnitFilter)
add_subdirectory(TestSegmentation3D)
add_subdirectory(TestCudaConv)
add_subdirectory(AdversarialMnist)
add_subdirectory(TestPerf)
add_subdirectory(TestVNet)
